--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/jest": "^24.0.12",
     "jest": "^24.8.0",
     "rxjs": "^6.5.1",
+    "rxjs-marbles": "^5.0.2",
     "ts-jest": "^24.0.2",
     "typescript": "^3.4.5"
   },
